# h264-encoder

./: .gitignore  .gitmodules  .npmignore  LICENSE.md  README.md  binding.gyp  main.cpp  package-lock.json  package.json  tsconfig.json  webpack.config.js
browser/: CMakeLists.txt  emscripten.cpp  h264-encoder.cpp  h264-encoder.h  h264-encoder.ts
example/: test.js
scripts/: build-napi.bat  build-web.bat
src/: init.cc  version.cc
